--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
       <td> <img src="mepic.jpg" alt="My Pic"></td>
       <td>
         <h1>Intesar Tahmid</h1>
-        <p><em>Undergraduate Student at <strong>CSEDU</strong></em></p>
-        <p>I am an Undergraduate student studying at the department of computer science
-          and engineering at University of Dhaka. <br> At present I live in Mohammadpur, Dhaka.
-          But my hometown is at Pirojpur. I am an unhappy person. And I am the one who
-          who is responsible for that.
+        <p><em>Undergraduate Student at <strong>Department of Computer Science & Engineering at University of Dhaka</strong></em></p>
+        <p>I am an enthusiastic, self-motivated,
+reliable, responsible and hard-working
+person.<br> I am a mature team worker
+and adaptable to all challenging
+situations.<br> I am able to work well both
+in a team environment as well as using
+own initiative.<br> Even if the task is out of
+my strong suit, I am able to work well
+under pressure and adhere to strict
+deadlines.
         </p>
       </td>
     </tr>
@@ -48,11 +54,19 @@
       <td>2015-2016</td>
       <td>Debater at JDC</td>
     </tr>
+    <tr>
+      <td>2015-2016</td>
+      <td>Department Head at JLRC</td>
+    </tr>
+    <tr>
+      <td>2015-2016</td>
+      <td>Editor at The Josephite Year Magazine</td>
+    </tr>
   </table>
   <hr size="3" noshade=$>
   <h3>Skills</h3>
 
-  <table cellspacing="4">
+  <table cellspacing="7" cellpadding="4">
     <tr>
       <td>HTML</td>
       <td>⭐⭐⭐⭐⭐</td>
@@ -73,8 +87,13 @@
     </tr>
   </table>
   <br>
-  <a href="hobbies.html" target="_blank">Hobbies</a>
-  <a href="contact.html" target="_blank">Contact Me</a>
+  <hr size="3" noshade=$>
+  <a href="hobbies.html" target="_blank">
+    <h2>Hobbies</h2>
+  </a>
+  <a href="contact.html" target="_blank">
+    <h2>Contact Me</h2>
+  </a>
 
 </body>
 
